--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
-
-    </body>
-</html>
+randomstring 
+almacsutka
+zebra
+szerecsendio
+szugyham
+AKOS
+AZ
+Az
+AVIATOR
